# Near-Duplicate-Detection-Using-Bloom-Filters-and-LSH

./: .gitignore  README.md  docker-compose.yml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md
.github/workflows/: BloomFilter.yml  LSH.yml  (+1 more)
a2/: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  LICENSE  README.md  discussion.md  pyproject.toml
a2/data/: hundred.tsv  onek.tsv
a2/data/result/: case2_onek.txt  case2_threehundred.txt  improved_result.txt  sample_result_case2.txt
a2/docs/: Makefile  conf.py  example.ipynb  index.md  make.bat
a2/expected/: five-shingle.txt  five-wordfreq.txt  thirty-md5.txt  thirty-wordfreq.txt
a2/results/: hundredk-Shingle.txt  hundredk-WordFreq.txt  hundredk-lsh-imp.txt  hundredk-lsh.txt  hundredk-md5.txt  onek-Shingle.txt  onek-WordFreq.txt  onek-lsh-imp.txt  onek-lsh.txt  onek-md5.txt  tenk-Shingle.txt  tenk-WordFreq.txt  tenk-lsh-imp.txt  tenk-lsh.txt  tenk-md5.txt  threehundred-Shingle.txt  threehundred-WordFreq.txt  threehundred-lsh-imp.txt  threehundred-lsh.txt  threehundred-md5.txt
a2/src/a2/: __init__.py  baseline.py  bloomfilter1.py  bloomfilter1_cli.py  bloomfilter3.py  bloomfilter3_cli.py  cli.py  dedup.py  eda-baseline.py  lsh_case1.py  lsh_case1_imp.py  lsh_case2.py  utils.py
a2/src/a3/: Dockerfile  __init__.py  dedup.py  lsh.py  redis_data.py  save_lsh_data_docker.sh
a2/src/a3/data/: five.tsv  thirty.tsv  threehundred.tsv
a2/test_output/: five-md5.txt  thirty-shingle.txt
a2/tests/: short_sent.tsv  test_a2.py  test_baseline.py  test_bloomfilter.py  test_lsh.py
