[tool.poetry]
name = "a2"
version = "0.1.0"
description = "A2 for bloom filter and LSH"
authors = ["chick-fil-a"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
matplotlib = ">=3.4.3"
mmh3 = "^5.0.1"
pandas = "^2.2.3"
bitarray = "^3.0.0"
nltk = "^3.9.1"
redis = "^5.2.0"
flask = "^3.1.0"
sphinx = "^6.1"
myst_nb = "^1.1.2" 
numpy = "<2"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
myst-nb = {version = "^1.1.2", python = "^3.9"}
sphinx-autoapi = "^3.3.2"
sphinx-rtd-theme = "^3.0.1"
pre-commit = "^3.6.0"
pytest = "^8.3.3"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
